<resources>
    <string name="app_name">@string/quran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quran">القرآن الكريم</string>
    <string name="reciters">القراء</string>
    <string name="reciter_search">بحث عن قارئ</string>
    <string name="chapter_search">بحث عن سورة</string>
    <string name="reciter_name">اسم القارئ</string>
    <string name="recitation_style">نوع التلاوة</string>
    <string name="chapters">السور</string>
    <string name="chapter_name">اسم السورة</string>
    <string name="revelation_place">مكان الوحى</string>
    <string name="revelation_order">ترتيب الوحى: %1$s</string>
    <string name="verse_count">عدد الآيات: %1$s</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="notification_permission_required">قد لا يعمل النطبيق جيداً إذا لم يحصل على إذن نشر الإشعارات، من فضلك قم بالسماح لعهذا الإذن</string>
    <string name="cancel_download">إلغاء التحميل</string>
    <string name="connection_error_title">عذراً، لقد حدث خطأّ!</string>
    <string name="connection_error_message">تعذر الوصول لملفات صوت هذا القارئ، من فضلك أعد المحاولة فى وقت لاحق أو قم باختيار قارئ آخر</string>
    <string name="connection_error_action">اختيار قارئ آخر</string>
    <string name="nav_graph_reciter_argument">reciter</string>
    <string name="nav_graph_chapter_argument">chapter</string>
    <string name="updating_data">جارٍ تحديث البيانات، من فضلك انتظر قليلاً…</string>
    <string name="initial_quote">لا خير في صحبة تحجب عن ذكر الله.</string>

    <array name="quotes">
        <item>عليكم بذكر الله تعالى فإنّه دواء، وإياكم وذكر الناس فإنّه داء.</item>
        <item>ذكر الله عند أمره ونهيه خير من ذكره باللسان.</item>
        <item>لا خير في صحبة تحجب عن ذكر الله.</item>
        <item>قوت الأرواح والقلوب ذكر الله علّام الغيوب.</item>
        <item>إنّ كل ما في هذه الحياة باطل إلا ذكر الله والعمل للآخرة.</item>
        <item>الاستغفار وطن للخَائفين، ضَماد للبائسِين، سعَادة للتائهين، فرج للمكرُوبين، وغُفرَان
            للمذنبين.
        </item>
        <item>ليس يتحسر أهل الجنة على شيءٍ إلّا ساعةً مرت بهم ولم يذكروا الله تعالى فيها.</item>
        <item>إنّ العبد ليأتي يوم القيامة بسيئاتٍ أمثال الجبال فيجد لسانه قد هدمها من كثرة ذكر الله
            تعالى.
        </item>
        <item>ما أعلم معصيةً أقبحُ من ترك ذكر الله تعالى.</item>
        <item>من علامات النفاق ثقل الذكر على اللسان، فَتُبْ إلى الله تعالى يخِفُّ الذِّكرُ على لسانك.
        </item>
        <item>إنّ مثل أهل الذكر والغفلة كمثل النور والظلمة.</item>
        <item>إنّ في الدنيا جنة من لم يدخلها لم يدخل جنة الآخرة، قالوا: وما هي يا إمام؟ قال: محبة الله
            تعالى وذكره.
        </item>
        <item>قال مجاهد رحمه الله تعالى: من استطاع ألّا يبيتَ إلّا طَاهراً ذاكراً مُستَغفراً فليفعَل
            فإنَّ الأروَاحَ تُبعَثُ على ما قُبِضَتْ عليه.
        </item>
        <item>صلّ عليه صلاة واحدة فيثني عليك الله بها عشراً اللهم صلّ وسلّم على نبينا محمد.</item>
        <item>أكثروا من قول ربّ اغفر لي ولوالدي فإنها تجمع بين ثلاث عبادات: الدعاء، والبر، والاستغفار.
        </item>
        <item>روح وريحان وجنة نعيم لعبادك الأموات يا الله.</item>
        <item>بعيداً عن كلّ شيء لا تكونوا كالذين نسوا الله فأنساهم أنفسهم.</item>
        <item>في هذه الحياة المليئة بالهفوات والاختلافات والخوف والقيود وبعض اللاوعي كُن أنت فحسب.</item>
        <item>كُن معي يا الله في كل أموري، فمن لي إذا لم تكن معي.</item>
        <item>فوض أمرك وأحلامك لله، وامض بالحياة مطمئناً، موقناً، واثقاً بأن لا أحد يقدر أن يغلق باباً
            فتحه الله لك.
        </item>
        <item>دع يدك تعتاد على فعل الخير دائماً، قدم دون مقابل، أعط ولا تذكر كرمك، الخُلق الجميل يُزهر بك
            مع مرور الأيام.
        </item>
    </array>
</resources>