<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/reciters_list">

    <fragment
        android:id="@+id/reciters_list"
        android:name="com.hifnawy.quran.ui.fragments.RecitersList"
        android:label="@string/reciters"
        tools:layout="@layout/fragment_reciters_list">

        <action
            android:id="@+id/action_to_chapters_list"
            app:destination="@id/chapters_list" />
    </fragment>
    <fragment
        android:id="@+id/chapters_list"
        android:name="com.hifnawy.quran.ui.fragments.ChaptersList"
        android:label="@string/chapters"
        tools:layout="@layout/fragment_chapters_list">

        <action
            android:id="@+id/action_to_reciters_list"
            app:destination="@id/reciters_list" />

        <action
            android:id="@+id/action_to_chapter_play"
            app:destination="@id/chapter_play" />

        <argument
            android:name="reciter"
            app:argType="com.hifnawy.quran.shared.model.Reciter"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/chapter_play"
        android:name="com.hifnawy.quran.ui.fragments.QuranMediaPlayback"
        android:label="@string/chapter_name"
        tools:layout="@layout/fragment_quran_media_playback">

        <action
            android:id="@+id/action_to_chapters_list"
            app:destination="@id/chapters_list" />

        <argument
            android:name="reciter"
            app:argType="com.hifnawy.quran.shared.model.Reciter"
            app:nullable="false" />

        <argument
            android:name="chapter"
            app:argType="com.hifnawy.quran.shared.model.Chapter"
            app:nullable="false" />
    </fragment>

    <action
        android:id="@+id/action_to_chapter_play_from_notification"
        app:destination="@id/chapter_play"
        app:launchSingleTop="false"
        app:popUpTo="@+id/chapter_play"
        app:popUpToInclusive="true"/>
</navigation>